# HalluAttn

./: .gitignore  environment.yaml  pyproject.toml
notebooks/: LLaVA.ipynb
scripts/: caption_coco.py  chair.py  chair_llava.sh
src/hallu_attn/: constants.py  utils.py
src/hallu_attn/baselines/: pai.py
